objects/Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>CPO_End_Date__c</fullName>
        <inlineHelpText>Date that the conditions expire on the purchase order</inlineHelpText>
        <label>CPO End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CPO__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>PO is for a Conditional Purchase Order</inlineHelpText>
        <label>CPO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Conditional_language_on_CPO_is_incorr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPO language is incorrect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Email Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Missing_End_Customer_PO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing End Customer PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_End_User_Contact_Name_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing End User Contact Name/Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Export_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Export Compliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Freight_Forwarder_information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Freight Forwarder information</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Reseller_s_Resale_Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Reseller’s Resale Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Missing_Ship_To_Contact_Name_Phone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Missing Ship To Contact Name/Phone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OppReleased__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>set in code when the finance user signs the rev rec checklist</inlineHelpText>
        <label>OppReleased</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Email__c</fullName>
        <label>Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Partial_Ship__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>when this is set it sets status to partial shipped, when cleared is sets to shipped complete</inlineHelpText>
        <label>Partial Ship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RevRecSigned__c</fullName>
        <formula>if(Opportunity__r.Finance_Reviewed__c ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RevRecSigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Finance Review</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Needs More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Accepted - To Be Scheduled For Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipment Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped - Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipped - Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Resposible_Email__c</fullName>
        <label>Technical Resposible Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Tracking_Information__c</fullName>
        <label>Tracking Information</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waiting_for_Prepayment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiting for Prepayment</label>
        <type>Checkbox</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Data</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Ship_Date__c</columns>
        <columns>Technical_Resposible_Email__c</columns>
        <columns>Tracking_Information__c</columns>
        <columns>Waiting_for_Prepayment__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Purchase Order</label>
        <sharedTo>
            <role>Renewal_Specialist</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>PO Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>